--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
     width: 100%;
     margin-bottom: 15px;
     padding: 10px 5px;
+    font-size: 18px;
     border: 1px solid black;
     border-radius: 10px;
 }
