--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 #app {
     margin: 0 auto;
-    padding: 30px;
+    padding: 30px 30px 15px 30px;
     max-width: 900px;
     background-color: #fff;
     border-radius: 20px;
@@ -52,6 +52,7 @@ body {
 }
 
 .btn_del {
+    margin: 0;
     padding: 5px 15px;
     color: #fff;
     font-size: 14px;
@@ -63,6 +64,9 @@ body {
 }
 
 .list {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
     list-style: none;
 }
 
@@ -70,5 +74,4 @@ body {
     display: flex;
     justify-content: space-between;
     font-size: 20px;
-    margin-bottom: 15px;
 }
